вынес логику, поделил на модули
https://github.com/EnterpriseQualityCoding/FizzBuzzEnterpriseEdition
