# storage/api-docs/api-docs.json
@@ -111,7 +111,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/StoreRequestRequest"
+                                "$ref": "#/components/schemas/RequestStoreRequest"
                             }
                         }
                     }
@@ -122,7 +122,12 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RequestResource"
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/RequestResource"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -145,7 +150,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/UpdateRequestRequest"
+                                "$ref": "#/components/schemas/RequestUpdateRequest"
                             }
                         }
                     }
@@ -156,7 +161,12 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RequestResource"
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/RequestResource"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -167,8 +177,8 @@
     },
     "components": {
         "schemas": {
-            "StoreRequestRequest": {
-                "title": "StoreRequestRequest",
+            "RequestStoreRequest": {
+                "title": "RequestStoreRequest",
                 "required": [
                     "name",
                     "email",
@@ -187,11 +197,11 @@
                 },
                 "type": "object",
                 "xml": {
-                    "name": "StoreRequestRequest"
+                    "name": "RequestStoreRequest"
                 }
             },
-            "UpdateRequestRequest": {
-                "title": "UpdateRequestRequest",
+            "RequestUpdateRequest": {
+                "title": "RequestUpdateRequest",
                 "required": [
                     "comment"
                 ],
@@ -202,13 +212,12 @@
                 },
                 "type": "object",
                 "xml": {
-                    "name": "UpdateRequestRequest"
+                    "name": "RequestUpdateRequest"
                 }
             },
             "RequestResource": {
                 "properties": {
                     "id": {
-                        "description": "title=RequestResource,",
                         "format": "int64"
                     },
                     "name": {
